--- a/layout/nav_admin.ejs
+++ b/layout/nav_admin.ejs
@@ -38,7 +38,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="d-flex align-items-center ms-6">
+            <div class="d-flex align-items-center ms-6 mb-6">
                 <div class="flex-shrink-0">
                     <img class="img-user mt-a rounded-circle object-fit-cover" src="../assets/images/andychen.jpeg"
                         alt="andychen">
