--- a/assets/scss/layout/_img.scss
+++ b/assets/scss/layout/_img.scss
@@ -23,7 +23,6 @@
     height: auto;
     object-fit: cover;
 }
-
-.arrow::after{
-    display: none;
+.collapsed{
+    transform: rotate(180deg);
 }
